--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Select Your Network</h1>
+        <h1>ඔබේ දුරකථන ජාලය තෝරන්න.</h1>
         
         <!-- Linking all buttons to pay.html -->
         <a href="pay.html" class="network-button dialog">Dialog</a>
