--- a/thank-you.html
+++ b/thank-you.html
@@ -50,10 +50,10 @@
 <body>
     <div class="container">
         <div class="message">
-            Thank you for your submission!
+            සුභ පැතුම්!
         </div>
         <div class="spinner" id="spinner"></div>
-        <div id="thank-you-message" class="hidden">You Data / Reload will send soon.</div>
+        <div id="thank-you-message" class="hidden">ඔබේ සේවාව ඉටු වෙනතුරු මඳක් රැදී සිටින්න.</div>
     </div>
 
     <script>
