--- a/pay.html
+++ b/pay.html
@@ -56,7 +56,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>ඔබට අවශ්‍ය අගය තොරන්න.</h1>
+        <h2>ඔබට අවශ්‍ය අගය තහවුරු කරන්න..</h2>
         
         <!-- Linking all buttons to pay.html -->
         <a href="login.html" class="network-button dialog">Rs. 500</a>
