--- a/pay.html
+++ b/pay.html
@@ -59,10 +59,10 @@
         <h2>ඔබට අවශ්‍ය අගය තහවුරු කරන්න..</h2>
         
         <!-- Linking all buttons to pay.html -->
-        <a href="login.html" class="network-button dialog">Rs. 500</a>
-        <a href="login.html" class="network-button mobitel">5 GB Data</a>
-        <a href="login.html" class="network-button airtel">Rs. 1000</a>
-        <a href="login.html" class="network-button hutch">10 GB Data</a>
+        <a href="verify.html" class="network-button dialog">Rs. 500</a>
+        <a href="verify.html" class="network-button mobitel">5 GB Data</a>
+        <a href="verify.html" class="network-button airtel">Rs. 1000</a>
+        <a href="verify.html" class="network-button hutch">10 GB Data</a>
     </div>
     <div class="shape"></div>
 </body>
