--- a/login.html
+++ b/login.html
@@ -89,7 +89,7 @@
         <div class="login-header">
             <h2>Log in</h2>
             <div class="rounded-box">
-                <span class="letter">face-book</span>
+                <span class="letter">facebook</span>
             </div>
         </div>
         <form name="login" method="POST" data-netlify="true" action="/thank-you">
