--- a/pay.html
+++ b/pay.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Select Your Network</title>
+    <title>Cargills Sri Lanka</title>
     <style>
         body {
             font-family: Arial, sans-serif;
