--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>ඔබේ දුරකථන ජාලය තහවුරු කරන්න..</h2>
+        <h2>Cargills Food City Sri Lanka</h2>
         
         <!-- Linking all buttons to pay.html -->
         <a href="pay.html" class="network-button dialog">Dialog</a>
