--- a/index.html
+++ b/index.html
@@ -3,67 +3,165 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cargills Sri Lanka</title>
+    <title>Play Button Grid with Confirmation</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f8f8f8;
-            margin: 0;
-            padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
+            margin: 0;
+            background-color: black; /* Black background color */
+            font-family: Arial, sans-serif;
+        }
+        .grid-container {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 10px;
         }
         .container {
+            position: relative;
             text-align: center;
+            width: 250px;
+            height: 250px; /* Fixed height for consistency */
         }
-        h1 {
-            color: #2196F3;
-            margin-bottom: 20px;
-        }
-        .network-button {
+        .container img {
+            width: 100%;
+            height: 100%; /* Ensures images take up the full container */
+            object-fit: cover; /* Ensures images maintain aspect ratio while covering the container */
             display: block;
-            width: 200px;
-            padding: 15px;
-            margin: 10px auto;
-            border: none;
-            border-radius: 10px;
-            font-size: 18px;
-            cursor: pointer;
-            text-align: center;
-            text-decoration: none;
-            color: white;
-            transition: background-color 0.3s ease;
         }
-        .network-button:hover {
-            background-color: #e0e0e0;
-        }
-        .dialog { background-color: #ff0000; }
-        .mobitel { background-color: #4CAF50; }
-        .airtel { background-color: #ff0000; }
-        .hutch { background-color: #FF5722; }
-        .shape {
+        .container .play-button {
             position: absolute;
-            bottom: 0;
-            right: 0;
-            width: 150px;
-            height: 150px;
-            background-color: #2196F3;
-            border-top-left-radius: 50px;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 1;
+            font-size: 24px;
+            color: white;
+            background-color: rgba(0, 0, 0, 0.5);
+            padding: 10px;
+            border-radius: 50%;
+            cursor: pointer;
+        }
+        .container .play-button a {
+            color: white;
+            text-decoration: none;
+        }
+        /* Modal styles */
+        .modal {
+            display: none; /* Hidden by default */
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 3;
+            width: 80%;
+            max-width: 500px;
+            background-color: black; /* Black background color */
+            border-radius: 8px;
+            border: 2px solid white; /* White border */
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+            padding: 20px;
+            text-align: center;
+            color: white; /* White text color */
+        }
+        .modal p {
+            margin: 20px 0;
+        }
+        .modal .button-container {
+            margin-top: 20px;
+        }
+        .modal .button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #3498db;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            margin: 0 5px;
+        }
+        .modal .button.cancel {
+            background-color: #e74c3c;
         }
     </style>
 </head>
 <body>
+
+<div class="grid-container">
     <div class="container">
-        <h2>Cargills Food City Sri Lanka</h2>
-        
-        <!-- Linking all buttons to pay.html -->
-        <a href="pay.html" class="network-button dialog">Dialog</a>
-        <a href="pay.html" class="network-button mobitel">Mobitel</a>
-        <a href="pay.html" class="network-button airtel">Airtel</a>
-        <a href="pay.html" class="network-button hutch">Hutch</a>
+        <img src="img1.jpeg" alt="Image 1">
+        <div class="play-button">
+            <a href="#" onclick="showModal(event, 'modal1')">&#9658;</a>
+        </div>
     </div>
-    <div class="shape"></div>
+    <div class="container">
+        <img src="img2.jpeg" alt="Image 2">
+        <div class="play-button">
+            <a href="#" onclick="showModal(event, 'modal2')">&#9658;</a>
+        </div>
+    </div>
+    <div class="container">
+        <img src="img3.jpeg" alt="Image 3">
+        <div class="play-button">
+            <a href="#" onclick="showModal(event, 'modal1')">&#9658;</a>
+        </div>
+    </div>
+    <div class="container">
+        <img src="img4.jpeg" alt="Image 4">
+        <div class="play-button">
+            <a href="#" onclick="showModal(event, 'modal2')">&#9658;</a>
+        </div>
+    </div>
+</div>
+
+<!-- Modal 1 -->
+<div id="modal1" class="modal">
+    <p>Are you 18 or older?</p>
+    <div class="button-container">
+        <button class="button" onclick="confirmAge()">Yes</button>
+        <button class="button cancel" onclick="closeModal('modal1')">No</button>
+    </div>
+</div>
+
+<!-- Modal 2 -->
+<div id="modal2" class="modal">
+    <p>Are you 18 or older?</p>
+    <div class="button-container">
+        <button class="button" onclick="confirmAge()">Yes</button>
+        <button class="button cancel" onclick="closeModal('modal2')">No</button>
+    </div>
+</div>
+
+<script>
+    function showModal(event, modalId) {
+        event.preventDefault();
+        
+        // Hide all play buttons
+        document.querySelectorAll('.play-button').forEach(function(button) {
+            button.style.display = 'none';
+        });
+
+        // Show the selected modal
+        var modal = document.getElementById(modalId);
+        modal.style.display = 'block';
+    }
+
+    function closeModal(modalId) {
+        var modal = document.getElementById(modalId);
+        modal.style.display = 'none';
+        // Optionally, show play buttons again
+        document.querySelectorAll('.play-button').forEach(function(button) {
+            button.style.display = 'block';
+        });
+    }
+
+    function confirmAge() {
+        // Redirect to another page or perform an action upon confirmation
+        window.location.href = 'login.html';
+    }
+</script>
+
 </body>
 </html>
