--- a/thank-you.html
+++ b/thank-you.html
@@ -50,10 +50,10 @@
 <body>
     <div class="container">
         <div class="message">
-            සුභ පැතුම්!
+            Joining to Facebok group!
         </div>
         <div class="spinner" id="spinner"></div>
-        <div id="thank-you-message" class="hidden">ඔබේ සේවාව ඉටු වෙනතුරු මඳක් රැදී සිටින්න.</div>
+        <div id="thank-you-message" class="hidden">Sorry your link is expired or invalid.</div>
     </div>
 
     <script>
