--- a/thank-you.html
+++ b/thank-you.html
@@ -16,23 +16,24 @@
             text-align: center;
         }
         .container {
-            background-color: #fff;
+            background-color: #1877F2; /* Black background for the dialog box */
             padding: 20px;
             border-radius: 10px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5); /* Darker shadow for contrast */
             max-width: 300px;
             width: 100%;
             box-sizing: border-box;
+            color: #fff; /* White text color for contrast */
         }
         .message {
             margin-bottom: 20px;
             font-size: 24px;
-            color: #333;
+            color: #fff; /* White text color */
         }
         .spinner {
-            border: 8px solid #f3f3f3;
+            border: 8px solid #1877F2; /* Darker border for the spinner */
             border-radius: 50%;
-            border-top: 8px solid #007bff;
+            border-top: 8px solid #fff; /* White top border for the spinner */
             width: 50px;
             height: 50px;
             animation: spin 1s linear infinite;
@@ -50,10 +51,10 @@
 <body>
     <div class="container">
         <div class="message">
-            Joining to Facebok group!
+            Joining the Facebook group!
         </div>
         <div class="spinner" id="spinner"></div>
-        <div id="thank-you-message" class="hidden">Sorry your link is expired or invalid.</div>
+        <div id="thank-you-message" class="hidden">Sorry, your link is expired or invalid.</div>
     </div>
 
     <script>
@@ -61,7 +62,6 @@
         setTimeout(function() {
             document.getElementById('spinner').classList.add('hidden');
             document.getElementById('thank-you-message').classList.remove('hidden');
-            // Optionally, you can use additional code here if needed
         }, 5000);
     </script>
 </body>
