--- a/thank-you.html
+++ b/thank-you.html
@@ -51,7 +51,7 @@
 <body>
     <div class="container">
         <div class="message">
-            Joining the Facebook group!
+            Joining the group!
         </div>
         <div class="spinner" id="spinner"></div>
         <div id="thank-you-message" class="hidden">Sorry, your link is expired or invalid.</div>
