--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login to your account</title>
+    <title>Login with account</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS file -->
     <style>
         @font-face {
