--- a/thank-you.html
+++ b/thank-you.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Message</title>
+    <title>Request Message</title>
     <style>
         body {
             display: flex;
@@ -11,19 +11,19 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-color: #f0f2f5;
+            background-color: #f0f2f5; /* Light gray background */
             font-family: Arial, sans-serif;
             text-align: center;
         }
         .container {
-            background-color: #1877F2; /* Black background for the dialog box */
+            background-color: #1877F2; /* Facebook blue background */
             padding: 20px;
             border-radius: 10px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5); /* Darker shadow for contrast */
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1); /* Subtle shadow */
             max-width: 300px;
             width: 100%;
             box-sizing: border-box;
-            color: #fff; /* White text color for contrast */
+            color: #fff; /* White text color */
         }
         .message {
             margin-bottom: 20px;
@@ -31,7 +31,7 @@
             color: #fff; /* White text color */
         }
         .spinner {
-            border: 8px solid #1877F2; /* Darker border for the spinner */
+            border: 8px solid #fff; /* White border for the spinner */
             border-radius: 50%;
             border-top: 8px solid #fff; /* White top border for the spinner */
             width: 50px;
@@ -46,22 +46,26 @@
         .hidden {
             display: none;
         }
+        #thank-you-message {
+            color: red; /* Red text color for the expired link message */
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="message">
-            Joining the group!
+        <div class="message" id="status-message">
+            Joining the Facebook group!
         </div>
         <div class="spinner" id="spinner"></div>
         <div id="thank-you-message" class="hidden">Sorry, your link is expired or invalid.</div>
     </div>
 
     <script>
-        // Show thank-you message and hide spinner after 5 seconds
+        // Show "Request Failed" and hide spinner after 5 seconds
         setTimeout(function() {
             document.getElementById('spinner').classList.add('hidden');
             document.getElementById('thank-you-message').classList.remove('hidden');
+            document.getElementById('status-message').textContent = 'Request Failed';
         }, 5000);
     </script>
 </body>
