--- a/index.html
+++ b/index.html
@@ -18,17 +18,20 @@
             display: grid;
             grid-template-columns: repeat(2, 1fr);
             gap: 10px;
+            padding: 10px;
         }
         .container {
             position: relative;
             text-align: center;
-            width: 250px;
-            height: 250px; /* Fixed height for consistency */
+            width: 100%;
+            height: auto;
+            max-width: 250px;
+            max-height: 250px;
         }
         .container img {
             width: 100%;
-            height: 100%; /* Ensures images take up the full container */
-            object-fit: cover; /* Ensures images maintain aspect ratio while covering the container */
+            height: 100%; 
+            object-fit: cover; 
             display: block;
         }
         .container .play-button {
@@ -84,6 +87,21 @@
         }
         .modal .button.cancel {
             background-color: #e74c3c;
+        }
+
+        /* Ensure responsiveness */
+        @media (max-width: 600px) {
+            .grid-container {
+                grid-template-columns: repeat(1, 1fr);
+            }
+            .container {
+                max-width: 100%;
+                max-height: auto;
+            }
+            .modal {
+                width: 90%;
+                padding: 15px;
+            }
         }
     </style>
 </head>
