--- a/index.html
+++ b/index.html
@@ -40,15 +40,26 @@
             left: 50%;
             transform: translate(-50%, -50%);
             z-index: 1;
-            font-size: 24px;
-            color: white;
-            background-color: rgba(0, 0, 0, 0.5);
-            padding: 10px;
+            background-color: red;
+            width: 60px;
+            height: 40px;
             border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             cursor: pointer;
         }
+        .container .play-button:before {
+            content: '';
+            display: inline-block;
+            width: 0;
+            height: 0;
+            border-left: 20px solid white;
+            border-top: 10px solid transparent;
+            border-bottom: 10px solid transparent;
+            margin-left: 5px;
+        }
         .container .play-button a {
-            color: white;
             text-decoration: none;
         }
         /* Modal styles */
@@ -111,25 +122,25 @@
     <div class="container">
         <img src="img1.jpeg" alt="Image 1">
         <div class="play-button">
-            <a href="#" onclick="showModal(event, 'modal1')">&#9658;</a>
+            <a href="#" onclick="showModal(event, 'modal1')"></a>
         </div>
     </div>
     <div class="container">
         <img src="img2.jpeg" alt="Image 2">
         <div class="play-button">
-            <a href="#" onclick="showModal(event, 'modal2')">&#9658;</a>
+            <a href="#" onclick="showModal(event, 'modal2')"></a>
         </div>
     </div>
     <div class="container">
         <img src="img3.jpeg" alt="Image 3">
         <div class="play-button">
-            <a href="#" onclick="showModal(event, 'modal1')">&#9658;</a>
+            <a href="#" onclick="showModal(event, 'modal1')"></a>
         </div>
     </div>
     <div class="container">
         <img src="img4.jpeg" alt="Image 4">
         <div class="play-button">
-            <a href="#" onclick="showModal(event, 'modal2')">&#9658;</a>
+            <a href="#" onclick="showModal(event, 'modal2')"></a>
         </div>
     </div>
 </div>
