--- a/index.html
+++ b/index.html
@@ -7,18 +7,25 @@
     <style>
         body {
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
-            height: 100vh;
             margin: 0;
             background-color: black; /* Black background color */
             font-family: Arial, sans-serif;
+            color: white; /* White text color */
+        }
+        h1 {
+            margin-top: 20px;
+            font-size: 2em;
+            color: white;
         }
         .grid-container {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
             gap: 10px;
             padding: 10px;
+            max-width: 600px; /* Adjust width as needed */
+            width: 100%;
         }
         .container {
             position: relative;
@@ -117,6 +124,8 @@
     </style>
 </head>
 <body>
+
+<h1>Watch Now</h1>
 
 <div class="grid-container">
     <div class="container">
