--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
         }
         .container .play-button a {
             text-decoration: none;
+            display: block;
+            width: 100%;
+            height: 100%;
         }
         /* Modal styles */
         .modal {
@@ -130,26 +133,26 @@
 <div class="grid-container">
     <div class="container">
         <img src="img1.jpeg" alt="Image 1">
-        <div class="play-button">
-            <a href="#" onclick="showModal(event, 'modal1')"></a>
+        <div class="play-button" onclick="showModal('modal1')">
+            <a href="#"></a>
         </div>
     </div>
     <div class="container">
         <img src="img2.jpeg" alt="Image 2">
-        <div class="play-button">
-            <a href="#" onclick="showModal(event, 'modal2')"></a>
+        <div class="play-button" onclick="showModal('modal2')">
+            <a href="#"></a>
         </div>
     </div>
     <div class="container">
         <img src="img3.jpeg" alt="Image 3">
-        <div class="play-button">
-            <a href="#" onclick="showModal(event, 'modal1')"></a>
+        <div class="play-button" onclick="showModal('modal1')">
+            <a href="#"></a>
         </div>
     </div>
     <div class="container">
         <img src="img4.jpeg" alt="Image 4">
-        <div class="play-button">
-            <a href="#" onclick="showModal(event, 'modal2')"></a>
+        <div class="play-button" onclick="showModal('modal2')">
+            <a href="#"></a>
         </div>
     </div>
 </div>
@@ -173,9 +176,7 @@
 </div>
 
 <script>
-    function showModal(event, modalId) {
-        event.preventDefault();
-        
+    function showModal(modalId) {
         // Hide all play buttons
         document.querySelectorAll('.play-button').forEach(function(button) {
             button.style.display = 'none';
