--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             transform: translate(-50%, -50%);
             z-index: 1;
             background-color: red;
-            width: 60px;
-            height: 60px;
-            border-radius: 50%;
+            width: 80px; /* Width of the button */
+            height: 50px; /* Height of the button */
+            border-radius: 10px; /* Rounded corners for rectangle */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -64,7 +64,7 @@
             border-left: 15px solid white;
             border-top: 15px solid transparent;
             border-bottom: 15px solid transparent;
-            margin-left: 2px;
+            margin-left: 5px; /* Adjust as needed for centering */
         }
         .container .play-button a {
             text-decoration: none;
