--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sri Lankan 18+ Video Group</title>
     <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+
         body {
             display: flex;
             flex-direction: column;
@@ -14,11 +20,13 @@
             font-family: Arial, sans-serif;
             color: white; /* White text color */
         }
+
         h1 {
             margin-top: 20px;
             font-size: 2em;
             color: white;
         }
+
         .grid-container {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
@@ -27,6 +35,7 @@
             max-width: 600px; /* Adjust width as needed */
             width: 100%;
         }
+
         .container {
             position: relative;
             text-align: center;
@@ -35,12 +44,14 @@
             max-width: 250px;
             max-height: 250px;
         }
+
         .container img {
             width: 100%;
-            height: 100%; 
-            object-fit: cover; 
+            height: 100%;
+            object-fit: cover;
             display: block;
         }
+
         .container .play-button {
             position: absolute;
             top: 50%;
@@ -56,6 +67,7 @@
             align-items: center;
             cursor: pointer;
         }
+
         .container .play-button:before {
             content: '';
             display: inline-block;
@@ -66,12 +78,14 @@
             border-bottom: 15px solid transparent;
             margin-left: 5px; /* Adjust as needed for centering */
         }
+
         .container .play-button a {
             text-decoration: none;
             display: block;
             width: 100%;
             height: 100%;
         }
+
         /* Modal styles */
         .modal {
             display: none; /* Hidden by default */
@@ -90,12 +104,15 @@
             text-align: center;
             color: white; /* White text color */
         }
+
         .modal p {
             margin: 20px 0;
         }
+
         .modal .button-container {
             margin-top: 20px;
         }
+
         .modal .button {
             display: inline-block;
             padding: 10px 20px;
@@ -106,6 +123,7 @@
             cursor: pointer;
             margin: 0 5px;
         }
+
         .modal .button.cancel {
             background-color: #e74c3c;
         }
@@ -115,10 +133,12 @@
             .grid-container {
                 grid-template-columns: repeat(1, 1fr);
             }
+
             .container {
                 max-width: 100%;
                 max-height: auto;
             }
+
             .modal {
                 width: 90%;
                 padding: 15px;
